# PaperTools

./: .editorconfig  .env.example  .env.sjtu.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_DEPLOYMENT.md  README_EN.md  README_FIX.md  SECURITY.md  batch_fix_all.sh  daily_update.sh  fix_failed_tasks.py  fix_missing_data.sh  fix_one_date.sh  papertools.py  pyproject.toml  requirements.txt  test_api_compare.py  test_filter_api.py  test_full_prompt.py  test_glm.py  test_proxy.py  update_webpage.sh  wrangler.jsonc
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
arxiv_paper/: README.txt  cs.AI_cs.CL_cs.CV_cs.LG_cs.MA_paper_2024-09-24.json  cs.AI_cs.CL_cs.CV_cs.LG_cs.MA_paper_2025-09-23.json  cs.AI_cs.CL_cs.CV_cs.LG_cs.MA_paper_2025-09-24.json  cs.AI_cs.CL_cs.CV_cs.LG_cs.MA_paper_2025-09-25.json  cs.AI_cs.CL_cs.CV_cs.LG_cs.MA_paper_2025-09-26.json  cs.AI_cs.CL_cs.CV_cs.LG_cs.MA_paper_2025-09-29.json  cs.AI_cs.CL_cs.CV_cs.LG_cs.MA_paper_2025-09-30.json  cs.AI_cs.CL_cs.CV_cs.LG_cs.MA_paper_20250924.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-01.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-02.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-03.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-06.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-07.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-08.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-09.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-10.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-14.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-15.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-16.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-17.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-20.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-21.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-22.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-23.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-24.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-28.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-29.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-30.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-10-31.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-11-04.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-11-05.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-11-06.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-11-07.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-11-10.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-11-12.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-11-13.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-11-14.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-11-18.json  cs.AI_cs.CL_cs.LG_cs.MA_paper_2025-11-19.json  (+87 more)
docs/: FILTER_2026-05-26_MANUAL_REVIEW.md  FILTER_RECALL_AUDIT_2026-05-16_TO_2026-05-29.md  QUALITY_GATES.md  ROBUSTNESS_AUDIT.md  SJTU_ROBUST_RUNBOOK.md  configuration.md  deployment.md  pipeline.md
domain_paper/: README.txt  excluded_papers_2025-09-23.json  excluded_papers_2025-09-24.json  excluded_papers_2025-09-25.json  excluded_papers_2025-09-26.json  excluded_papers_2025-09-29.json  excluded_papers_2025-09-30.json  excluded_papers_2025-10-01.json  excluded_papers_2025-10-02.json  excluded_papers_2025-10-03.json  excluded_papers_2025-10-06.json  excluded_papers_2025-10-07.json  excluded_papers_2025-10-08.json  excluded_papers_2025-10-09.json  excluded_papers_2025-10-10.json  excluded_papers_2025-10-14.json  excluded_papers_2025-10-15.json  excluded_papers_2025-10-16.json  excluded_papers_2025-10-17.json  excluded_papers_2025-10-20.json  excluded_papers_2025-10-21.json  excluded_papers_2025-10-22.json  excluded_papers_2025-10-23.json  excluded_papers_2025-10-24.json  excluded_papers_2025-10-28.json  excluded_papers_2025-10-29.json  excluded_papers_2025-10-30.json  excluded_papers_2025-10-31.json  excluded_papers_2025-11-04.json  excluded_papers_2025-11-05.json  excluded_papers_2025-11-06.json  excluded_papers_2025-11-07.json  excluded_papers_2025-11-10.json  excluded_papers_2025-11-12.json  excluded_papers_2025-11-13.json  excluded_papers_2025-11-14.json  excluded_papers_2025-11-18.json  excluded_papers_2025-11-19.json  excluded_papers_2025-11-20.json  excluded_papers_2025-11-21.json  (+97 more)
scripts/: batch_affiliations.py  batch_process_dates.sh  check_dependency_metadata.py  check_secrets.py  classify_pipeline_failure.py  cleanup_filenames.py  daily_full_run.sh  delete_single_category_files.py  fix_failed_content.py  fix_missing_dates.py  preflight_check.py  robust_daily_update.sh  validate_published_payloads.py
summary/: README.txt  daily_overview_2025-09-26.md  daily_overview_2025-09-29.md  daily_overview_2025-09-30.md  daily_overview_2025-10-01.md  daily_overview_2025-10-02.md  daily_overview_2025-10-03.md  daily_overview_2025-10-06.md  daily_overview_2025-10-07.md  daily_overview_2025-10-08.md  daily_overview_2025-10-09.md  daily_overview_2025-10-10.md  daily_overview_2025-10-14.md  daily_overview_2025-10-15.md  daily_overview_2025-10-16.md  daily_overview_2025-10-17.md  daily_overview_2025-10-20.md  daily_overview_2025-10-21.md  daily_overview_2025-10-22.md  daily_overview_2025-10-23.md  daily_overview_2025-10-24.md  daily_overview_2025-10-28.md  daily_overview_2025-10-29.md  daily_overview_2025-10-30.md  daily_overview_2025-10-31.md  daily_overview_2025-11-04.md  daily_overview_2025-11-05.md  daily_overview_2025-11-06.md  daily_overview_2025-11-07.md  daily_overview_2025-11-10.md  daily_overview_2025-11-12.md  daily_overview_2025-11-13.md  daily_overview_2025-11-14.md  daily_overview_2025-11-18.md  daily_overview_2025-11-19.md  daily_overview_2025-11-20.md  daily_overview_2025-11-21.md  daily_overview_2025-11-25.md  daily_overview_2025-11-26.md  daily_overview_2025-11-28.md  (+91 more)
templates/: base.html
tests/: conftest.py  test_batch_affiliations.py  test_batch_process_dates.py  test_cache_manager.py  test_config.py  test_crawl_arxiv.py  test_daily_failure_classifier.py  test_daily_runtime_defaults.py  test_dependency_metadata.py  test_docs_publish_guidance.py  test_document_content.py  test_document_extraction.py  test_exceptions.py  test_fallback_atomic_writers.py  test_io_and_cache.py  test_logger.py  (+17 more)
(+209 files in other folders)
